; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/input/extr_atp.c_atp_enable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/input/extr_atp.c_atp_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atp_softc = type { i32, i32 }

@ATP_ENABLED = common dso_local global i32 0, align 4
@ATP_LLEVEL_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"enabled atp\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.atp_softc*)* @atp_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @atp_enable(%struct.atp_softc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.atp_softc*, align 8
  store %struct.atp_softc* %0, %struct.atp_softc** %3, align 8
  %4 = load %struct.atp_softc*, %struct.atp_softc** %3, align 8
  %5 = getelementptr inbounds %struct.atp_softc, %struct.atp_softc* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @ATP_ENABLED, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %24

11:                                               ; preds = %1
  %12 = load %struct.atp_softc*, %struct.atp_softc** %3, align 8
  %13 = getelementptr inbounds %struct.atp_softc, %struct.atp_softc* %12, i32 0, i32 1
  %14 = call i32 @memset(i32* %13, i32 0, i32 4)
  %15 = load %struct.atp_softc*, %struct.atp_softc** %3, align 8
  %16 = call i32 @atp_init_stroke_pool(%struct.atp_softc* %15)
  %17 = load i32, i32* @ATP_ENABLED, align 4
  %18 = load %struct.atp_softc*, %struct.atp_softc** %3, align 8
  %19 = getelementptr inbounds %struct.atp_softc, %struct.atp_softc* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = or i32 %20, %17
  store i32 %21, i32* %19, align 4
  %22 = load i32, i32* @ATP_LLEVEL_INFO, align 4
  %23 = call i32 @DPRINTFN(i32 %22, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %11, %10
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @atp_init_stroke_pool(%struct.atp_softc*) #1

declare dso_local i32 @DPRINTFN(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
